--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </section>
     <!-- About Section -->
     <section id="about">
+        <h1>Undraw Illustrations</h1>
         <div class="image-container">
             <div id="image1">
                 <h2>Web Innovation</h2>
@@ -52,7 +53,20 @@
     </section>
     <!-- Projects Section -->
     <section id="projects">
-
+        <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div id="columns">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam accusamus qui, ab voluptates reprehenderit rerum quo mollitia libero asperiores doloremque dolores, nihil repellat doloribus perspiciatis magni dolore dolorum ipsam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio labore accusamus saepe numquam vel laudantium? Ex deserunt unde voluptas dolorum tempora vero, repellat quam cumque cum. Odit delectus est fugit!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tempora dicta deleniti laudantium consequatur dolorem. Animi vitae labore amet enim odit repellat eos inventore, molestiae quidem doloremque voluptatibus dolorem eum.</p>
+        </div>
     </section>
     <!-- Contact Section -->
     <section id="contact">
