final production code

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
     <!-- About Section -->
     <section id="about">
         <h1>Undraw Illustrations</h1>
-        <div class="image-container">
-            <div id="image1">
+        <div class="about-container">
+            <div class="image-container">
                 <h2>Web Innovation</h2>
-                <img src="img/undraw_proud_coder_light.svg" loading="lazy" />
+                <img id="image1" src="img/undraw_proud_coder_light.svg" loading="lazy" />
             </div>
-            <div id="image2">
+            <div class="image-container">
                 <h2>Problem Solving</h2>
-                <img src="img/undraw_feeling_proud_light.svg" loading="lazy" />              
+                <img id="image2" src="img/undraw_feeling_proud_light.svg" loading="lazy" />              
             </div>
-            <div id="image3">
+            <div class="image-container">
                 <h2>High Concept</h2>
-                <img src="img/undraw_conceptual_idea_light.svg" loading="lazy" />
+                <img id="image3" src="img/undraw_conceptual_idea_light.svg" loading="lazy" />
             </div>
         </div>
     </section>
@@ -63,7 +63,7 @@
             <button class="secondary outline">Alt Outline</button>
             <button class="outline" disabled>Disabled</button>
         </div>
-        <div id="columns">
+        <div class="columns" id="columns">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam accusamus qui, ab voluptates reprehenderit rerum quo mollitia libero asperiores doloremque dolores, nihil repellat doloribus perspiciatis magni dolore dolorum ipsam!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio labore accusamus saepe numquam vel laudantium? Ex deserunt unde voluptas dolorum tempora vero, repellat quam cumque cum. Odit delectus est fugit!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tempora dicta deleniti laudantium consequatur dolorem. Animi vitae labore amet enim odit repellat eos inventore, molestiae quidem doloremque voluptatibus dolorem eum.</p>
