--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         <div class="about-container">
             <div class="image-container">
                 <h2>Web Innovation</h2>
-                <img id="image1" src="img/undraw_proud_coder_light.svg" loading="lazy" />
+                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1" loading="lazy" />
             </div>
             <div class="image-container">
                 <h2>Problem Solving</h2>
-                <img id="image2" src="img/undraw_feeling_proud_light.svg" loading="lazy" />              
+                <img src="img/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2" loading="lazy" />              
             </div>
             <div class="image-container">
                 <h2>High Concept</h2>
-                <img id="image3" src="img/undraw_conceptual_idea_light.svg" loading="lazy" />
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3" loading="lazy" />
             </div>
         </div>
     </section>
