final production code

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="container">
+<body>
     <!-- Dark Mode Switch -->
     <div class="theme-switch-wrapper">
-        <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
+        <label class="theme-switch">
+            <input type="checkbox">
             <div class="slider round"></div>
         </label>
         <span id="toggle-icon">
