--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
     <!-- Dark Mode Switch -->
     <div class="theme-switch-wrapper">
-        <label class="theme-switch">
-            <input type="checkbox">
-            <div class="slider round"></div>
-        </label>
         <span id="toggle-icon">
             <span class="toggle-text">Light Mode</span>
             <i class="fas fa-sun"></i>
         </span>
+        <label class="theme-switch">
+            <input type="checkbox">
+            <div class="slider round"></div>
+        </label>
    </div>
    <!-- Navigation -->
     <nav id="nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
     </nav>
     <!-- Home Section -->
     <section id="home">
@@ -40,15 +40,15 @@
         <div class="about-container">
             <div class="image-container">
                 <h2>Web Innovation</h2>
-                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1" loading="lazy" />
+                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
             </div>
             <div class="image-container">
                 <h2>Problem Solving</h2>
-                <img src="img/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2" loading="lazy" />              
+                <img src="img/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2">              
             </div>
             <div class="image-container">
                 <h2>High Concept</h2>
-                <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3" loading="lazy" />
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
             </div>
         </div>
     </section>
@@ -63,10 +63,8 @@
             <button class="secondary outline">Alt Outline</button>
             <button class="outline" disabled>Disabled</button>
         </div>
-        <div class="columns" id="columns">
+        <div class="text-box" id="text-box">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam accusamus qui, ab voluptates reprehenderit rerum quo mollitia libero asperiores doloremque dolores, nihil repellat doloribus perspiciatis magni dolore dolorum ipsam!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio labore accusamus saepe numquam vel laudantium? Ex deserunt unde voluptas dolorum tempora vero, repellat quam cumque cum. Odit delectus est fugit!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sit alias eos ducimus expedita quam, corporis, blanditiis vel facilis, animi adipisci? Nemo enim quisquam maiores minima, qui omnis. Accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tempora dicta deleniti laudantium consequatur dolorem. Animi vitae labore amet enim odit repellat eos inventore, molestiae quidem doloremque voluptatibus dolorem eum.</p>
         </div>
     </section>
     <!-- Contact Section -->
